# Monotonic-WOE-Binning-Algorithm

./: .gitignore  Makefile  README.md  environment.yml  pyproject.toml  requirements.txt  setup.cfg  setup.py  tox.ini
data/: readme.md
monotonic_binning/: __init__.py  monotonic_woe_binning.py
tests/: demo_run.py  test_monotonic_woe_binning.py
