# setup.cfg file at the root directory
[metadata]
name = monotonicbinning
version = 0.0.1
author = .
description = Implement monotonic binning
long_description = file: README.md
url = .
# keywords = sample, example, setuptools

[options]
python_requires = >=3.7
#install_requires = 
#    pandas

[options.extras_require]
test = 
    pytest
    coverage

[options.package_data]
#sample = 
#    example_data.csv'